swvl-deployments/prod/services.yml
apiVersion: v1
kind: Service
metadata:
  name: real-app
  namespace: real-app-prod
spec:
  clusterIP: 10.72.15.106
  clusterIPs:
  - 10.72.15.106
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: real-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
